[project]
name = "my-math"
version = "0.1.0"
description = ""
authors = [
    {name = "ktsonyovski",email = "ktsonyovski@outlook.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pytest (>=8.4.0,<9.0.0)",
    "pylint (>=3.3.7,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
